# cpp-catboy-gen

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/modules/: clear.cpp  getImage.cpp  getImage.h
